# algorithms-structures-course

./: README.md  setup.cfg
algorithms_sc/recursive/: queens.py
algorithms_sc/sorts/: __init__.py  bitonic.py  gnome.py  heap.py  shaker.py  utils.py
algorithms_sc/strings/: __init__.py  boyer_moore.py  kmp.py  utils.py
notebooks/: task1.ipynb  task2.ipynb  task4.ipynb  task5.ipynb
tests/: test_sorts.py  test_strings.py
