[metadata]
name = algorithms-cs
description = Code for algorithms and data structures special course at MSU Physics Department
author = Yan Budakyan
author-email = astromid@gmail.com
license = mit

[options.packages.find]
where = src
exclude =
    tests

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
testpaths = tests